Fixed bug with menu title not aligning correctly (css)

--- a/src/styles/menu.scss
+++ b/src/styles/menu.scss
@@ -17,6 +17,8 @@
         font-family: 'Montserrat', sans-serif;
         font-weight: 400;
         margin-bottom: .3rem;
+        width: 100%;
+        text-align: center;
     }
 
     &__subtitle {
